Add modified auth page

--- a/static/examples/html/auth.html
+++ b/static/examples/html/auth.html
@@ -29,7 +29,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&amp;family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/auth.css?time=1650277432011">
+  <link rel="stylesheet" href="../assets/css/auth.css?time=1650546366338">
 </head>
 
 <body>
@@ -45,24 +45,6 @@
             <p>Morbi nec ultricies risus. Curabitur nibh eros, facilisis et elementum vitae</p>
           </div>
           <div class="auth-sidebar__footer">
-            <div class="theme-switcher">
-              <span class="theme-switcher__icon">
-                <svg class="icon icon-system" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                  <use xlink:href="#system-mode"></use>
-                </svg>
-                <svg class="icon icon-light" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                  <use xlink:href="#light-mode"></use>
-                </svg>
-                <svg class="icon icon-dark" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                  <use xlink:href="#dark-mode"></use>
-                </svg>
-              </span>
-              <select class="form-control form-control--sm theme-switcher__select" aria-label="Select a theme">
-                <option value="system">System</option>
-                <option value="light">Light</option>
-                <option value="dark">Dark</option>
-              </select>
-            </div>
             <p class="auth-sidebar__credit">Photo by <a href="https://unsplash.com/@maritafox?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Marita Kavelashvili</a> on <a href="https://unsplash.com/s/photos/pine-forest?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
             </p>
           </div>
@@ -94,8 +76,28 @@
               </div>
             </div>
           </form>
+        </div>
+        <div class="auth-screen__footer">
           <p>Not a member? <a href="#">Sign up</a>
           </p>
+          <div class="theme-switcher">
+            <span class="theme-switcher__icon">
+              <svg class="icon icon-system" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                <use xlink:href="#system-mode"></use>
+              </svg>
+              <svg class="icon icon-light" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                <use xlink:href="#light-mode"></use>
+              </svg>
+              <svg class="icon icon-dark" aria-hidden="true" role="img" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                <use xlink:href="#dark-mode"></use>
+              </svg>
+            </span>
+            <select class="form-control form-control--sm theme-switcher__select" aria-label="Select a theme">
+              <option value="system">System</option>
+              <option value="light">Light</option>
+              <option value="dark">Dark</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
