Update UI files

--- a/static/ui/html/section/gallery-preview.html
+++ b/static/ui/html/section/gallery-preview.html
@@ -1,35 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Gallery</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436614"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239436614"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/section/gallery.css?time=1663239436614"/>
-    <style>
-      body {
-        padding-block: 3rem;
-      }
-      
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="gallery gallery--uneven">
-        <figure class="gallery-item gallery-item--1"><a href="#"><img src="http://localhost:3000/img/post/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="snow mountain under stars" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--2"><a href="#"><img src="http://localhost:3000/img/post/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg" alt="aerial view of mountain" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--3"><a href="#"><img src="http://localhost:3000/img/post/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg" alt="mountain coated with snow" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--4"><a href="#"><img src="http://localhost:3000/img/post/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg" alt="closeup photo of rocky mountain under blue and white sky" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--5"><a href="#"><img src="http://localhost:3000/img/post/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg" alt="man standing on grass field overlooking mountain" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--6"><a href="#"><img src="http://localhost:3000/img/post/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg" alt="man with red backpack standing on cliff facing mountains under white sky during daytime" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--7"><a href="#"><img src="http://localhost:3000/img/post/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg" alt="snow covered mountain under blue sky during daytime" lazyload="lazyload"/></a></figure>
-        <figure class="gallery-item gallery-item--8"><a href="#"><img src="http://localhost:3000/img/post/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg" alt="three brown wooden boat on blue lake water taken at daytime" lazyload="lazyload"/></a></figure>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Gallery</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617448" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244617448" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/section/gallery.css?time=1663244617448" />
+  <style>
+    body {
+      padding-block: 3rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="gallery gallery--uneven">
+      <figure class="gallery-item gallery-item--1">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="snow mountain under stars" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--2">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg" alt="aerial view of mountain" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--3">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg" alt="mountain coated with snow" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--4">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg" alt="closeup photo of rocky mountain under blue and white sky" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--5">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg" alt="man standing on grass field overlooking mountain" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--6">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg" alt="man with red backpack standing on cliff facing mountains under white sky during daytime" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--7">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg" alt="snow covered mountain under blue sky during daytime" lazyload="lazyload" />
+        </a>
+      </figure>
+      <figure class="gallery-item gallery-item--8">
+        <a href="#">
+          <img src="https://sprucecss.com/ui/img/post/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg" alt="three brown wooden boat on blue lake water taken at daytime" lazyload="lazyload" />
+        </a>
+      </figure>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
