--- a/static/ui/html/section/site-header-preview.html
+++ b/static/ui/html/section/site-header-preview.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Site Header</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436967"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239436967"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/section/site-header.css?time=1663239436967"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/site-navigation.css?time=1663239436967"/>
-  </head>
-  <body>
-    <header class="site-header">
-      <div class="container">
-        <div class="site-header__inner">
-          <div class="site-header__column"><a class="site-header__logo" href="#"><img src="http://localhost:3000/img/cone-made-logo.svg" alt="Cone Made" width="72" height="72"/></a>
-            <nav class="site-navigation site-header__navigation" aria-label="Site">
-              <button class="btn btn--primary btn--icon site-navigation__btn" data-action="navigation-toggle" aria-controls="primary-menu" aria-expanded="false" aria-label="Menu">
-                            <svg class="icon btn__icon" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;"><path d='M1,15l16,0c0.55,0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,-0c-0.55,-0 -1,0.45 -1,1c0,0.55 0.45,1 1,1Zm-0,-5l16,-0c0.55,-0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,0c-0.55,0 -1,0.45 -1,1c0,0.55 0.45,1 1,1Zm-1,-6c0,0.55 0.45,1 1,1l16,0c0.55,0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,0c-0.55,0 -1,0.45 -1,1Z'/>
-                            </svg>
-              </button>
-              <ul class="navigation-menu">
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="site-header__actions"><a class="site-header__email" href="mailto:hello@conedevelopment.com">hello@conedevelopment.com</a><a class="btn btn--primary">Log in</a></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Site Header</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617661" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244617661" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/section/site-header.css?time=1663244617661" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/site-navigation.css?time=1663244617661" />
+</head>
+
+<body>
+  <header class="site-header">
+    <div class="container">
+      <div class="site-header__inner">
+        <div class="site-header__column">
+          <a class="site-header__logo" href="#">
+            <img src="https://sprucecss.com/ui/img/cone-made-logo.svg" alt="Cone Made" width="72" height="72" />
+          </a>
+          <nav class="site-navigation site-header__navigation" aria-label="Site">
+            <button class="btn btn--primary btn--icon site-navigation__btn" data-action="navigation-toggle" aria-controls="primary-menu" aria-expanded="false" aria-label="Menu">
+              <svg class="icon btn__icon" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;">
+                <path d='M1,15l16,0c0.55,0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,-0c-0.55,-0 -1,0.45 -1,1c0,0.55 0.45,1 1,1Zm-0,-5l16,-0c0.55,-0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,0c-0.55,0 -1,0.45 -1,1c0,0.55 0.45,1 1,1Zm-1,-6c0,0.55 0.45,1 1,1l16,0c0.55,0 1,-0.45 1,-1c0,-0.55 -0.45,-1 -1,-1l-16,0c-0.55,0 -1,0.45 -1,1Z' />
+              </svg>
+            </button>
+            <ul class="navigation-menu">
+              <li>
+                <a href="#">Services</a>
+              </li>
+              <li>
+                <a href="#">Products</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="site-header__actions">
+          <a class="site-header__email" href="mailto:hello@conedevelopment.com">hello@conedevelopment.com</a>
+          <a class="btn btn--primary">Log in</a>
         </div>
       </div>
-    </header>
-    <script src="http://localhost:3000/js/component/site-navigation.js" type="module"></script>
-  </body>
+    </div>
+  </header>
+  <script src="https://sprucecss.com/ui/js/component/site-navigation.js?time=1663244617661" type="module"></script>
+</body>
+
 </html>
