--- a/static/ui/html/section/site-footer-preview.html
+++ b/static/ui/html/section/site-footer-preview.html
@@ -1,54 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Site Footer</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436914"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239436914"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/section/site-footer.css?time=1663239436914"/>
-  </head>
-  <body>
-    <footer class="site-footer">
-      <div class="container">
-        <div class="site-footer__top">
-          <div class="site-footer__col"><a class="site-footer__logo" href="#"><img src="http://localhost:3000/img/cone-made-logo.svg" alt="Cone Made"/></a></div>
-          <div class="site-footer__col">
-            <h3 class="site-footer__title" id="site-footer-title-01">Getting Started</h3>
-            <ul class="site-footer__navigation" aria-labelledby="site-footer-title-01">
-              <li><a href="#">Introduction</a></li>
-              <li><a href="#">Installation</a></li>
-              <li><a href="#">Structure and Code</a></li>
-              <li><a href="#">Sass</a></li>
-            </ul>
-          </div>
-          <div class="site-footer__col">
-            <h3 class="site-footer__title" id="site-footer-title-02">Elements</h3>
-            <ul class="site-footer__navigation" aria-labelledby="site-footer-title-02">
-              <li><a href="#">Typography</a></li>
-              <li><a href="#">Tables</a></li>
-              <li><a href="#">Buttons</a></li>
-              <li><a href="#">Forms</a></li>
-            </ul>
-          </div>
-          <div class="site-footer__col">
-            <h3 class="site-footer__title" id="site-footer-title-03">More From Us</h3>
-            <ul class="site-footer__navigation" aria-labelledby="site-footer-title-03">
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Pine - A web development blog</a></li>
-              <li><a href="#">Root - An admin package for Laravel</a></li>
-              <li><a href="#">Bite-Sized Accessibility</a></li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Site Footer</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617626" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244617626" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/section/site-footer.css?time=1663244617626" />
+</head>
+
+<body>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="site-footer__top">
+        <div class="site-footer__col">
+          <a class="site-footer__logo" href="#">
+            <img src="https://sprucecss.com/ui/img/cone-made-logo.svg" alt="Cone Made" />
+          </a>
         </div>
-        <div class="site-footer__bottom">
-          <p class="site-footer__copyright">© 2022 Cone Made - Some rights are reserved.</p>
+        <div class="site-footer__col">
+          <h3 class="site-footer__title" id="site-footer-title-01">Getting Started</h3>
+          <ul class="site-footer__navigation" aria-labelledby="site-footer-title-01">
+            <li>
+              <a href="#">Introduction</a>
+            </li>
+            <li>
+              <a href="#">Installation</a>
+            </li>
+            <li>
+              <a href="#">Structure and Code</a>
+            </li>
+            <li>
+              <a href="#">Sass</a>
+            </li>
+          </ul>
+        </div>
+        <div class="site-footer__col">
+          <h3 class="site-footer__title" id="site-footer-title-02">Elements</h3>
+          <ul class="site-footer__navigation" aria-labelledby="site-footer-title-02">
+            <li>
+              <a href="#">Typography</a>
+            </li>
+            <li>
+              <a href="#">Tables</a>
+            </li>
+            <li>
+              <a href="#">Buttons</a>
+            </li>
+            <li>
+              <a href="#">Forms</a>
+            </li>
+          </ul>
+        </div>
+        <div class="site-footer__col">
+          <h3 class="site-footer__title" id="site-footer-title-03">More From Us</h3>
+          <ul class="site-footer__navigation" aria-labelledby="site-footer-title-03">
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">Pine - A web development blog</a>
+            </li>
+            <li>
+              <a href="#">Root - An admin package for Laravel</a>
+            </li>
+            <li>
+              <a href="#">Bite-Sized Accessibility</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </footer>
-  </body>
+      <div class="site-footer__bottom">
+        <p class="site-footer__copyright">© 2022 Cone Made - Some rights are reserved.</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
